package com.solodev.mindpad.utils

object Constants {



    object TestTags{
        const val ORDER_SECTION_CARD = "ORDER_SECTION_CARD"
        const val TITLE_TEXT_FIELD = "TITLE_TEXT_FIELD"
        const val CONTENT_TEXT_FIELD = "CONTENT_TEXT_FIELD"
        const val NOTE_ITEM = "NOTE_ITEM"
    }
}