...
            modifier = Modifier
                .fillMaxWidth()
                .padding(start = 8.dp, end = 8.dp),
            horizontalArrangement = Arrangement.spacedBy(8.dp)
        ) {
            DefaultChipButton(
                text = "Title",
                isSelected = noteOrder is NoteOrder.Title,
                onSelectionChanged = { onOrderChange(NoteOrder.Title(noteOrder.orderType)) }
            )
            DefaultChipButton(
                text = "Date",
                isSelected = noteOrder is NoteOrder.Date,
...
                isSelected = noteOrder.orderType is OrderType.Ascending,
                onSelectionChanged = {
                    onOrderChange(noteOrder.copy(OrderType.Ascending))
                }
            )
            DefaultChipButton(
                text = "Descending",
                isSelected = noteOrder.orderType is OrderType.Descending,
                onSelectionChanged = {
                    onOrderChange(noteOrder.copy(OrderType.Descending))
                }
            )
        }
...
