...
    }

    Scaffold(
        snackbarHost = { SnackbarHost(hostState = snackBarHostState) },
        floatingActionButton = {
            MindPadFab(
                modifier = Modifier.testTag("Add"),
                onClick = {
                    navController.navigate(Screen.AddEditNoteScreen.route)
                },
                color = MaterialTheme.colorScheme.tertiary,
                imageVector = Icons.Outlined.Add
            )
...

                IconButton(
                    onClick = { viewModel.onEvent(NotesEvent.ToggleOrderSection) }
                ) {
                    Icon(
                        imageVector = Icons.AutoMirrored.Outlined.Sort,
                        contentDescription = "Sort"
                    )
                }
            }

            AnimatedVisibility(
                visible = state.isOrderSectionVisible,
...
