...
    }

    Scaffold(
        snackbarHost = { SnackbarHost(hostState = snackBarHostState) },
        floatingActionButton = {
            MindPadFab(
                modifier = Modifier.testTag("Save"),
                onClick = {
                    viewModel.onEvent(AddEditNoteEvent.SaveNote)
                },
                color = MaterialTheme.colorScheme.tertiary,
                imageVector = Icons.Filled.Save
            )
...
